package logic;

public class Newsreport {
}
