package model;

public enum StockType {
    TECH,
    ENERGY,
    HEALTH,
    FINANCE,
    INDUSTRY
}
